fixing chart alignment

--- a/resources/css/data.css
+++ b/resources/css/data.css
@@ -12,6 +12,7 @@
 .graph {
   max-height: 100%;
   max-width: 100%;
+  margin-bottom: 20px;
 }
 
 .data-header {
